add navbar html and CSS

--- a/index.html
+++ b/index.html
@@ -14,16 +14,44 @@
 
 </head>
 <body>
-    <p>Checking this works.</p>
-    <!--The website should include the following bootstrap components:
+    <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
+    <div class="navbar-brand">Philip Culling</div>
+    <!--Not sure if we need this bit?
+        <a class="navbar-brand" href="#"><img src="images/acoustic-guitar.png">Philip Culling</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    Not sure if we need this bit?-->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Background</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Work</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Skills to develop</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End navigation bar -->
 
-    - A Navigation bar
+    <!--
+    Add a Navigation bar.
     
-    - A navigation menu at the top. Feel free to use bootstrap's navbar or create your own.
+    - A navigation menu at the top. Use bootstrap's navbar.
 
       - Include links that are applicable to your portfolio.
   
-        - Links should navigate to the appropriate sections 
+        - Links should navigate to the appropriate sections href="#" possibly?
 
     - A hero section
 
