--- a/index.html
+++ b/index.html
@@ -44,16 +44,26 @@
   </nav>
   <!-- End navigation bar -->
 
+    <!-- Jumbotron -->
+    <div class="jumbotron">
+        <div class="jumboCopy">
+          <h1 class="display-4">Philip Culling</h1>
+          <p class="lead">Philip is a former teacher and currently a small business manager 
+            with years of experience in leadership and management 
+            but a complete novice in web design, 
+            and looking for a career in a completely new direction.</p>
+            <div> <img src="Images/Phil photo.jpg"alt="Phil photo">
+            </div>
+            <!--Check relative path for the photo.
+                Remember it's not yet styled so don't expect too much!
+                If the photo is ridiculously small / large, you will be able
+                to change this in the CSS.-->
+        </div>
+      </div>
+      <!-- End jumbotron -->
+
     <!--
-    Add a Navigation bar.
-    
-    - A navigation menu at the top. Use bootstrap's navbar.
-
-      - Include links that are applicable to your portfolio.
-  
-        - Links should navigate to the appropriate sections href="#" possibly?
-
-    - A hero section
+       - A hero section
 
         - A jumbotron featuring your picture, your name, and any other information you'd like to include.
 
