add CSS for hero section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
     <div class="navbar-brand">Philip Culling</div>
-    <!--Not sure if we need this bit?
+    <!--Not sure if we need this bit? Delete at the end if you haven't needed any of it.
         <a class="navbar-brand" href="#"><img src="images/acoustic-guitar.png">Philip Culling</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,27 +46,25 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron">
+        <h1 class="display-4">Philip Culling</h1>
         <div class="jumboCopy">
-          <h1 class="display-4">Philip Culling</h1>
-          <p class="lead">Philip is a former teacher and currently a small business manager 
-            with years of experience in leadership and management 
-            but a complete novice in web design, 
-            and looking for a career in a completely new direction.</p>
-            <div> <img src="Images/Phil photo.jpg"alt="Phil photo">
-            </div>
-            <!--Check relative path for the photo.
-                Remember it's not yet styled so don't expect too much!
+            <p class="lead">
+                Philip is a former teacher and currently 
+                a small business manager with years of experience
+                in leadership and management 
+                but a complete novice in web design, 
+                and looking for a career in a completely new direction.</p>
+        </div>
+        <div>
+            <img src="Images/Phil photo.jpg"alt="Phil photo">
+        </div>
+            <!--Remember it's not yet styled so don't expect too much!
                 If the photo is ridiculously small / large, you will be able
                 to change this in the CSS.-->
-        </div>
-      </div>
+    </div>
       <!-- End jumbotron -->
 
     <!--
-       - A hero section
-
-        - A jumbotron featuring your picture, your name, and any other information you'd like to include.
-
     - A work section
 
       - A section displaying your work in grid. 
