add html for card section and complete card 1

--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
         <div>
             <img src="Images/Phil photo.jpg"alt="Phil photo">
         </div>
-            <!--Remember it's not yet styled so don't expect too much!
-                If the photo is ridiculously small / large, you will be able
-                to change this in the CSS.-->
     </div>
       <!-- End jumbotron -->
+
+        <!-- Cards -->
 
     <!--
     - A work section
@@ -75,8 +74,61 @@
 
         - The description should give a brief overview of the work.
 
-      - Each project will eventually link to your class project work!
+      - Each project will eventually link to your class project work! -->
 
+  <div class="container-fluid">
+    <h2 class="sectionHeading">Work</h2>
+    <div class="row showsNear">
+      <!-- Card 1 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->
+         <img src="Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
+          <div class="card-body">
+            <h5 class="card-title">Pre-work project</h5>
+            <p class="card-text">Pre-work gave students an instroduction to html, CSS, github and JavaScript 
+              and was tested by the creation of a brief study guide 
+              looking like the screenshot above.
+            </p>
+            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/prework-study-guide">Go to site</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 1 -->
+
+      <!-- Card 2 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+ <!--Replace with placeholder or proper image and update text and alt-->     
+      <img src="images/show2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Week 1 Challenge</h5>
+            <p class="card-text">Look up what you did and write a sentence about week 1 challenge</p>
+  <!--Link to site?-->          <a href="#" class="btn btn-primary">Go to site</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 2 -->
+
+      <!-- Card 3 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+<img src="images/show3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Week 2 Challenge</h5>
+            <p class="card-text">Write a sentence about week 2 challenge</p>
+ <!--Link to site?-->           <a href="#" class="btn btn-primary">Go to site</a>
+          </div>
+        </div>
+      </div>
+      <!-- End card 3 -->
+
+    </div>
+  </div>
+  <!-- End cards -->
+
+    <!--
     - A skills section
 
       - List out the skills you expect to learn from the bootcamp.
