--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div class="container-fluid">
     <h2 class="sectionHeading">Work</h2>
-    <div class="row showsNear">
+    <div class="row Work">
       <!-- Card 1 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
@@ -99,12 +99,12 @@
       <!-- Card 2 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
- <!--Replace with placeholder or proper image and update text and alt-->     
-      <img src="images/show2.jpg" class="card-img-top" alt="...">
+ <!--Replace with placeholder or proper image and update text and alt-->
+      <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
           <div class="card-body">
             <h5 class="card-title">Week 1 Challenge</h5>
-            <p class="card-text">Look up what you did and write a sentence about week 1 challenge</p>
-  <!--Link to site?-->          <a href="#" class="btn btn-primary">Go to site</a>
+            <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
+            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week1challenge">Go to site</a>
           </div>
         </div>
       </div>
