--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
-<img src="images/show3.jpg" class="card-img-top" alt="...">
+<img src="images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
           <div class="card-body">
             <h5 class="card-title">Week 2 Challenge</h5>
-            <p class="card-text">Write a sentence about week 2 challenge</p>
- <!--Link to site?-->           <a href="#" class="btn btn-primary">Go to site</a>
+            <p class="card-text">Week 2 Challenge was to build a portfolio</p>
+            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
           </div>
         </div>
       </div>
