add html and content for skills section

--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
   </nav>
   <!-- End navigation bar -->
 
-    <!-- Jumbotron -->
-    <div class="jumbotron">
-        <h1 class="display-4">Philip Culling</h1>
-        <div class="jumboCopy">
-            <p class="lead">
-                Philip is a former teacher and currently 
-                a small business manager with years of experience
-                in leadership and management 
-                but a complete novice in web design, 
-                and looking for a career in a completely new direction.</p>
-        </div>
-        <div>
-            <img src="Images/Phil photo.jpg"alt="Phil photo">
-        </div>
+  <!-- Jumbotron -->
+  <div class="jumbotron">
+    <h1 class="display-4">Philip Culling</h1>
+    <div class="jumboCopy">
+      <p class="lead">
+        Philip is a former teacher and currently 
+        a small business manager with years of experience
+        in leadership and management 
+        but a complete novice in web design, 
+        and looking for a career in a completely new direction.</p>
     </div>
-      <!-- End jumbotron -->
+    <div>
+     <img src="Images/Phil photo.jpg"alt="Phil photo">
+    </div>
+  </div>
+  <!-- End jumbotron -->
 
-        <!-- Cards -->
+  <!-- Cards -->
 
-    <!--
+  <!--
     - A work section
 
       - A section displaying your work in grid. 
@@ -84,27 +84,27 @@
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->
          <img src="Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
-          <div class="card-body">
-            <h5 class="card-title">Pre-work project</h5>
-            <p class="card-text">Pre-work gave students an instroduction to html, CSS, github and JavaScript 
+        <div class="card-body">
+          <h5 class="card-title">Pre-work project</h5>
+          <p class="card-text">Pre-work gave students an instroduction to html, CSS, github and JavaScript 
               and was tested by the creation of a brief study guide 
               looking like the screenshot above.
-            </p>
-            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/prework-study-guide">Go to site</a>
-          </div>
+          </p>
+          <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/prework-study-guide">Go to site</a>
         </div>
       </div>
+    </div>
       <!-- End card 1 -->
 
       <!-- Card 2 -->
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
  <!--Replace with placeholder or proper image and update text and alt-->
-      <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
+          <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
           <div class="card-body">
-            <h5 class="card-title">Week 1 Challenge</h5>
-            <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
-            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week1challenge">Go to site</a>
+           <h5 class="card-title">Week 1 Challenge</h5>
+           <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
+           <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week1challenge">Go to site</a>
           </div>
         </div>
       </div>
@@ -114,16 +114,15 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
-<img src="images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
-          <div class="card-body">
-            <h5 class="card-title">Week 2 Challenge</h5>
-            <p class="card-text">Week 2 Challenge was to build a portfolio</p>
-            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
-          </div>
+          <img src="images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
+            <div class="card-body">
+              <h5 class="card-title">Week 2 Challenge</h5>
+              <p class="card-text">Week 2 Challenge was to build a portfolio</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
         </div>
       </div>
       <!-- End card 3 -->
-
     </div>
   </div>
   <!-- End cards -->
@@ -131,8 +130,33 @@
     <!--
     - A skills section
 
-      - List out the skills you expect to learn from the bootcamp.
+      - List out the skills you expect to learn from the bootcamp. -->
 
+  <div class="container-fluid content">
+    <h2 class="sectionHeading">Skills to be developed</h2>
+    <!-- Row 1 -->
+    <div class="row valueProp">
+      <div class="sideAccent">
+      </div>
+      <div class="col-8">
+        <ul>
+          <li>html</li>
+          <li>CSS</li>
+          <li>Bootstrap</li>
+          <li>JavaScript</li>
+          <li>git</li>
+          <li>github</li>
+          <li>UX design principles</li>
+          <li>jQuery</li>
+          <li>React</li>
+          <li>RESTful-compliant network requests</li>
+          <li>Node.js</li>
+          <li>Netlify</li>
+          <li>Foundaations of object-oriented and functional programming paradigms</li>
+        </ul>
+    </div>
+  </div>
+<!--
     - An about / contact section.
 
       - An "About Me" section in the same row.
