add CSS for skills section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="sideAccent">
       </div>
       <div class="col-8">
-        <ul>
+        <ul class="list">
           <li>html</li>
           <li>CSS</li>
           <li>Bootstrap</li>
@@ -152,7 +152,7 @@
           <li>RESTful-compliant network requests</li>
           <li>Node.js</li>
           <li>Netlify</li>
-          <li>Foundaations of object-oriented and functional programming paradigms</li>
+          <li>Foundations of object-oriented and functional programming paradigms</li>
         </ul>
     </div>
   </div>
