add Contact section

--- a/index.html
+++ b/index.html
@@ -139,13 +139,15 @@
       <div class="sideAccent">
       </div>
       <div class="col-8">
-        <ul class="list">
+        <ul class="list-left">
           <li>html</li>
           <li>CSS</li>
           <li>Bootstrap</li>
           <li>JavaScript</li>
           <li>git</li>
           <li>github</li>
+        </ul>
+        <ul class="list-right">
           <li>UX design principles</li>
           <li>jQuery</li>
           <li>React</li>
@@ -156,6 +158,25 @@
         </ul>
     </div>
   </div>
+
+  <section class="page-section" id="contact">
+    <div id="Contact" class="categoryGridArea">
+      <h2>Contact</h2>
+    </div>
+    <div id="Contact Content Area" class="categoryGridArea">
+      <ul> 
+        <li>
+        Tel: 07989 393276
+        </li>
+        <li>
+        philculling@hotmail.com
+        </li>
+        <li>
+        <a href="https://github.com/">github</a>
+        </li>
+      </ul>
+    </div>
+  </section>
 <!--
     - An about / contact section.
 
