--- a/index.html
+++ b/index.html
@@ -177,10 +177,19 @@
       </ul>
     </div>
   </section>
-<!--
-    - An about / contact section.
 
-      - An "About Me" section in the same row.
+  <footer class="emailContain">
+      <form>
+        <h3>Subscribe for updates</h3>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+  </footer>
+<!--
     
     - A footer section.
 
