--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         philculling@hotmail.com
         </li>
         <li>
-        <a href="https://github.com/">github</a>
+        <a target="_blank" href="https://github.com/">github</a>
         </li>
       </ul>
     </div>
