correct links in navbar; change colour of 'github'

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       <ul class="navbar-nav mr-auto">
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Background</a>
+            <a class="nav-link" href="#Background">Background</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Work</a>
+            <a class="nav-link" href="#Work">Work</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Skills to develop</a>
+            <a class="nav-link" href="#Skills">Skills to be developed</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#Contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -45,7 +45,7 @@
   <!-- End navigation bar -->
 
   <!-- Jumbotron -->
-  <div class="jumbotron">
+  <div class="jumbotron" id="Background">
     <h1 class="display-4">Philip Culling</h1>
     <div class="jumboCopy">
       <p class="lead">
@@ -76,7 +76,7 @@
 
       - Each project will eventually link to your class project work! -->
 
-  <div class="container-fluid">
+  <div class="container-fluid" id="Work">
     <h2 class="sectionHeading">Work</h2>
     <div class="row Work">
       <!-- Card 1 -->
@@ -133,7 +133,7 @@
       - List out the skills you expect to learn from the bootcamp. -->
 
   <div class="container-fluid content">
-    <h2 class="sectionHeading">Skills to be developed</h2>
+    <h2 class="sectionHeading" id="Skills">Skills to be developed</h2>
     <!-- Row 1 -->
     <div class="row valueProp">
       <div class="sideAccent">
@@ -159,7 +159,7 @@
     </div>
   </div>
 
-  <section class="page-section" id="contact">
+  <section class="page-section Contact" id="contact">
     <div id="Contact" class="categoryGridArea">
       <h2>Contact</h2>
     </div>
