--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
     <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
     <div class="navbar-brand">Philip Culling</div>
-    <!--Not sure if we need this bit? Delete at the end if you haven't needed any of it.
-        <a class="navbar-brand" href="#"><img src="images/acoustic-guitar.png">Philip Culling</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    Not sure if we need this bit?-->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         </li>
@@ -61,21 +54,6 @@
   </div>
   <!-- End jumbotron -->
 
-  <!-- Cards -->
-
-  <!--
-    - A work section
-
-      - A section displaying your work in grid. 
-
-        - If you need to use placeholder image use: https://placehold.co/ 
-
-      - Use bootstrap cards for each project.
-
-        - The description should give a brief overview of the work.
-
-      - Each project will eventually link to your class project work! -->
-
   <div class="container-fluid" id="Work">
     <h2 class="sectionHeading">Work</h2>
     <div class="row Work">
@@ -86,7 +64,7 @@
          <img src="Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
         <div class="card-body">
           <h5 class="card-title">Pre-work project</h5>
-          <p class="card-text">Pre-work gave students an instroduction to html, CSS, github and JavaScript 
+          <p class="card-text">Pre-work gave students an introduction to html, CSS, github and JavaScript 
               and was tested by the creation of a brief study guide 
               looking like the screenshot above.
           </p>
@@ -103,7 +81,7 @@
           <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
           <div class="card-body">
            <h5 class="card-title">Week 1 Challenge</h5>
-           <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
+           <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task.</p>
            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week1challenge">Go to site</a>
           </div>
         </div>
@@ -117,7 +95,7 @@
           <img src="images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
             <div class="card-body">
               <h5 class="card-title">Week 2 Challenge</h5>
-              <p class="card-text">Week 2 Challenge was to build a portfolio</p>
+              <p class="card-text">Week 2 Challenge was to build a portfolio.</p>
               <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
             </div>
         </div>
@@ -126,11 +104,6 @@
     </div>
   </div>
   <!-- End cards -->
-
-    <!--
-    - A skills section
-
-      - List out the skills you expect to learn from the bootcamp. -->
 
   <div class="container-fluid content">
     <h2 class="sectionHeading" id="Skills">Skills to be developed</h2>
@@ -189,13 +162,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
   </footer>
-<!--
-    
-    - A footer section.
-
-      - All hyperlinks should have a hover effect.
-
-      - All buttons should display a box shadow upon hover.
--->
 </body>
 </html>
