minor change to text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h1 class="display-4">Philip Culling</h1>
     <div class="jumboCopy">
       <p class="lead">
-        Philip is a former teacher and currently 
+        Philip is a former teacher. He is currently 
         a small business manager with years of experience
         in leadership and management 
         but a complete novice in web design, 
