correct week 2 challenge screenshot

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
-          <img src="images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
+          <img src="Images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
             <div class="card-body">
               <h5 class="card-title">Week 2 Challenge</h5>
               <p class="card-text">Week 2 Challenge was to build a portfolio.</p>
