Minor refactoring adjustments and improvements to wording

--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap-Portfolio</title>
+    <title>Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Anton|Jura&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
-
 </head>
 <body>
     <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
-    <div class="navbar-brand">Philip Culling</div>
+    <div class="navbar-brand">
+      Philip Culling
+    </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        </li>
         <li class="nav-item">
             <a class="nav-link" href="#Background">Background</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#Work">Work</a>
+            <a class="nav-link" href="#Work">Projects</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#Skills">Skills to be developed</a>
+            <a class="nav-link" href="#Skills">Skills studied</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#Contact">Contact</a>
@@ -46,7 +46,8 @@
         a small business manager with years of experience
         in leadership and management 
         but a complete novice in web design, 
-        and looking for a career in a completely new direction.</p>
+        and looking for a career in a completely new direction.
+      </p>
     </div>
     <div>
      <img src="Images/Phil photo.jpg"alt="Phil photo">
@@ -95,7 +96,7 @@
           <img src="Images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
             <div class="card-body">
               <h5 class="card-title">Week 2 Challenge</h5>
-              <p class="card-text">Week 2 Challenge was to build a portfolio.</p>
+              <p class="card-text">Week 2 Challenge was to build our first portfolio.</p>
               <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
             </div>
         </div>
@@ -131,6 +132,7 @@
         </ul>
     </div>
   </div>
+  </div>
 
   <section class="page-section Contact" id="contact">
     <div id="Contact" class="categoryGridArea">
@@ -145,7 +147,7 @@
         philculling@hotmail.com
         </li>
         <li>
-        <a target="_blank" href="https://github.com/">github</a>
+        <a target="_blank" href="https://github.com/">Link to Phil's GitHub site</a>
         </li>
       </ul>
     </div>
