Minor improvements to CSS

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- Jumbotron -->
   <div class="jumbotron" id="Background">
-    <h1 class="display-4">Philip Culling</h1>
+    <h3 class="display-6">Philip Culling</h3>
     <div class="jumboCopy">
       <p class="lead">
         Philip is a former teacher. He is currently 
@@ -55,7 +55,7 @@
   </div>
   <!-- End jumbotron -->
 
-  <div class="container-fluid" id="Work">
+  <div class="container-fluid projects" id="Work">
     <h2 class="sectionHeading">Work</h2>
     <div class="row Work">
       <!-- Card 1 -->
@@ -106,7 +106,7 @@
   </div>
   <!-- End cards -->
 
-  <div class="container-fluid content">
+  <div class="container-fluid content skills">
     <h2 class="sectionHeading" id="Skills">Skills to be developed</h2>
     <!-- Row 1 -->
     <div class="row valueProp">
