--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->
-         <img src="Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
+         <img src="./Images/Pre-work Study Guide.png" class="card-img-top" alt="Screenshot of pre-work study guide">
         <div class="card-body">
           <h5 class="card-title">Pre-work project</h5>
           <p class="card-text">Pre-work gave students an introduction to html, CSS, github and JavaScript 
               and was tested by the creation of a brief study guide 
-              looking like the screenshot above.
+              looking like the screenshot above
           </p>
           <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/prework-study-guide">Go to site</a>
         </div>
@@ -82,7 +82,7 @@
           <img src="https://placehold.co/600x300/orange/white" class="card-img-top" alt="Placeholder image orange background white text">
           <div class="card-body">
            <h5 class="card-title">Week 1 Challenge</h5>
-           <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task.</p>
+           <p class="card-text">Week 1 Challenge was to test our understanding of html and CSS with a refactoring task</p>
            <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week1challenge">Go to site</a>
           </div>
         </div>
@@ -93,15 +93,141 @@
       <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
         <div class="card">
 <!--Replace with placeholder or proper image and update text and alt-->          
-          <img src="Images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of Week 2 Challenge">
+          <img src="./Images/Screenshot of week 2 challenge.png" class="card-img-top" alt="Screenshot of first portfolio">
             <div class="card-body">
               <h5 class="card-title">Week 2 Challenge</h5>
-              <p class="card-text">Week 2 Challenge was to build our first portfolio.</p>
+              <p class="card-text">Week 2 Challenge was to build our first portfolio</p>
               <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
             </div>
         </div>
       </div>
       <!-- End card 3 -->
+
+      <!-- Card 4 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/console_finances.png" class="card-img-top" alt="Screenshot of week 4 challenge, first use of JavaScript">
+            <div class="card-body">
+              <h5 class="card-title">First work with JavaScript</h5>
+              <p class="card-text">Week 4 Challenge was to extract and return data using JavaScript</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 4 -->
+
+      <!-- Card 5 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/password_generator.png" class="card-img-top" alt="Screenshot of JavaScript password generator">
+            <div class="card-body">
+              <h5 class="card-title">Password Generator</h5>
+              <p class="card-text">Week 5 Challenge was to build a password generator using JavaScript</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 5 -->
+
+      <!-- Card 6 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/codequiz.png" class="card-img-top" alt="Screenshot of Code Quiz">
+            <div class="card-body">
+              <h5 class="card-title">Code Quiz</h5>
+              <p class="card-text">Week 6 Challenge was to design a coding quiz</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 6 -->
+
+      <!-- Card 7 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/planner_app.png" class="card-img-top" alt="Screenshot of Planner app">
+            <div class="card-body">
+              <h5 class="card-title">Planner App</h5>
+              <p class="card-text">Week 7 Challenge was to build a Planner App</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 7 -->
+
+      <!-- Card 8 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/Weatherdashboard.png" class="card-img-top" alt="Screenshot of Weather Dashboard">
+            <div class="card-body">
+              <h5 class="card-title">Weather Dashboard</h5>
+              <p class="card-text">Week 8 Challenge was to build an app displaying data obtained from a 3rd party API</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 8 -->
+
+      <!-- Card 9 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/cinema_search.png" class="card-img-top" alt="Screenshot of Cinema Search">
+            <div class="card-body">
+              <h5 class="card-title">Project 1: Cinema Search</h5>
+              <p class="card-text">In our first team project, we built a site for film lovers</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 9 -->
+
+      <!-- Card 10 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/README_generator.png" class="card-img-top" alt="Screenshot of README Generator">
+            <div class="card-body">
+              <h5 class="card-title">README Generator</h5>
+              <p class="card-text">Week 11 Challenge was to build a README Generator using node.js</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 10 -->
+
+      <!-- Card 11 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/team_profile_generator_screenshot.png" class="card-img-top" alt="Screenshot of Team Profile Generator">
+            <div class="card-body">
+              <h5 class="card-title">Team Profile Generator</h5>
+              <p class="card-text">Week 12 Challenge was to build a Team Profile Generator using node.js</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 11 -->
+
+      <!-- Card 12 -->
+      <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+        <div class="card">
+<!--Replace with placeholder or proper image and update text and alt-->          
+          <img src="./Images/lingua_amore.png" class="card-img-top" alt="Screenshot of Lingua Amore">
+            <div class="card-body">
+              <h5 class="card-title">Project 2: Lingua Amore</h5>
+              <p class="card-text">In our final project, we started to build a language learning app</p>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+            </div>
+        </div>
+      </div>
+      <!-- End card 12 -->
     </div>
   </div>
   <!-- End cards -->
