update links on project cards

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="card-body">
               <h5 class="card-title">First work with JavaScript</h5>
               <p class="card-text">Week 4 Challenge was to extract and return data using JavaScript</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/Console-Finances">Go to site</a>
             </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
             <div class="card-body">
               <h5 class="card-title">Password Generator</h5>
               <p class="card-text">Week 5 Challenge was to build a password generator using JavaScript</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/Password-Generator">Go to site</a>
             </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
             <div class="card-body">
               <h5 class="card-title">Code Quiz</h5>
               <p class="card-text">Week 6 Challenge was to design a coding quiz</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/Code-Quiz">Go to site</a>
             </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
             <div class="card-body">
               <h5 class="card-title">Planner App</h5>
               <p class="card-text">Week 7 Challenge was to build a Planner App</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/Planner-App">Go to site</a>
             </div>
         </div>
       </div>
@@ -167,7 +167,7 @@
             <div class="card-body">
               <h5 class="card-title">Weather Dashboard</h5>
               <p class="card-text">Week 8 Challenge was to build an app displaying data obtained from a 3rd party API</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/Weather-Dashboard">Go to site</a>
             </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
             <div class="card-body">
               <h5 class="card-title">Project 1: Cinema Search</h5>
               <p class="card-text">In our first team project, we built a site for film lovers</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/cinema_search">Go to site</a>
             </div>
         </div>
       </div>
@@ -195,7 +195,7 @@
             <div class="card-body">
               <h5 class="card-title">README Generator</h5>
               <p class="card-text">Week 11 Challenge was to build a README Generator using node.js</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/README_Generator">View README.md</a>
             </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
             <div class="card-body">
               <h5 class="card-title">Team Profile Generator</h5>
               <p class="card-text">Week 12 Challenge was to build a Team Profile Generator using node.js</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://github.com/philculling/team_profile_generator">View README.md</a>
             </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
             <div class="card-body">
               <h5 class="card-title">Project 2: Lingua Amore</h5>
               <p class="card-text">In our final project, we started to build a language learning app</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/week2challenge">Go to site</a>
+              <a target="_blank" class="btn btn-primary" href="https://beamish-sprite-6f8b41.netlify.app">Go to site</a>
             </div>
         </div>
       </div>
