update links for README generator and Team Profile generator

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="card-body">
               <h5 class="card-title">README Generator</h5>
               <p class="card-text">Week 11 Challenge was to build a README Generator using node.js</p>
-              <a target="_blank" class="btn btn-primary" href="https://philculling.github.io/README_Generator">View README.md</a>
+              <a target="_blank" class="btn btn-primary" href="https://github.com/philculling/README_Generator">Go to GitHub site</a>
             </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
             <div class="card-body">
               <h5 class="card-title">Team Profile Generator</h5>
               <p class="card-text">Week 12 Challenge was to build a Team Profile Generator using node.js</p>
-              <a target="_blank" class="btn btn-primary" href="https://github.com/philculling/team_profile_generator">View README.md</a>
+              <a target="_blank" class="btn btn-primary" href="https://github.com/philculling/team_profile_generator">Go to GitHub site</a>
             </div>
         </div>
       </div>
